Kubernetes/productAPI/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productapi
spec:
  ingressClassName: nginx
  rules:
    - host: "dev-app14.mfolabs.me"
      http:
        paths:
          - path: /api/Product/
            pathType: Prefix
            backend:
              service:
                name: productapi
                port:
                  number: 8000
